redo container on layout

--- a/WebApplication5/Views/Shared/_Layout.cshtml
+++ b/WebApplication5/Views/Shared/_Layout.cshtml
@@ -66,10 +66,10 @@
     </header>
 
     @await RenderSectionAsync("OutsideContainer", required: false)
-    <div class="container p-3">
-        <main role="main">
+    <div id="soc-main-container">
+        <div id="soc-inner-container" class="container p-3">
             @RenderBody()
-        </main>
+        </div>
     </div>
 
     <footer class="border-top gr-footer text-muted">
