--- a/WebApplication5/Views/Home/LandingPage.cshtml
+++ b/WebApplication5/Views/Home/LandingPage.cshtml
@@ -1,35 +1,44 @@
-﻿@section OutsideContainer {
-    <div class="columns mx-6">
-        <div class="mr-2 column">
-            <div id="landing-text" class="">
-                <h1 class="title is-1">Learn something new</h1>
-                <h2 class="subtitle" style="margin-bottom:0.5rem">Visit the place to share programming knowledge, and better understand software.</h2>
-                <a class="button is-rounded bg-so" asp-controller="Home" asp-action="Index">Explore</a>
-            </div>
+﻿<div class="columns">
+    <div class="column">
+        <div id="landing-text" class="">
+            <h1 class="title is-1">Learn something new</h1>
+            <h2 class="subtitle" style="margin-bottom:0.5rem">Visit the place to share programming knowledge, and better understand software.</h2>
+            <a class="button is-medium is-rounded bg-so" asp-controller="Home" asp-action="Index">Explore</a>
+        </div>
 
-        </div>
-        <div class="mr-2 column is-7">
-            <img id="landing-img" src="~/vecteezy_studying-and-learning-online-concept_1270244.svg" alt="Man studying" />
-            <small id="landing-attr"><a href="https://www.vecteezy.com/free-vector/study">Study Vectors by Vecteezy</a></small>
-        </div>
     </div>
+    <div class="column is-7">
+        <img id="landing-img" src="~/vecteezy_studying-and-learning-online-concept_1270244.svg" alt="Man studying" />
+        <small id="landing-attribution"><a href="https://www.vecteezy.com/free-vector/study" style="color: #363636;">Study Vectors by Vecteezy</a></small>
+    </div>
+</div>
 
+<style>
+    #landing-attribution {
+        margin-left: 60%;
+    }
 
-    <style>
-        #landing-attr {
-            margin-left: 80%;
-        }
+    #landing-text {
+        margin-top: 40%;
+    }
 
+    @@media screen and (max-width: 1030px) {
         #landing-text {
-            margin-top: 40%;
+            margin-top: calc(50% - 100px);
         }
+    }
 
-        /* .vertical-center {
-                    margin: 0;
-                    position: absolute;
-                    top: 50%;
-                    -ms-transform: translateY(-50%);
-                    transform: translateY(-50%);
-                } */
-    </style>
-}
+
+    #soc-main-container {
+        background-color: #ffdba5;
+        background-image: linear-gradient(to bottom right, #ffdba5, #485fc7);
+    }
+
+    /* .vertical-center {
+                margin: 0;
+                position: absolute;
+                top: 50%;
+                -ms-transform: translateY(-50%);
+                transform: translateY(-50%);
+            } */
+</style>
