--- a/WebApplication5/Views/Home/LandingPage.cshtml
+++ b/WebApplication5/Views/Home/LandingPage.cshtml
@@ -2,7 +2,9 @@
     <div class="column">
         <div id="landing-text" class="">
             <h1 class="title is-1">Learn something new</h1>
-            <h2 class="subtitle" style="margin-bottom:0.5rem">Visit the place to share programming knowledge, and better understand software.</h2>
+            <h2 class="subtitle" style="margin-bottom:0.5rem">Enjoy a fully functional clone of stackoverflow.com with an updated frontend design, 
+                and a more convienent rich text editor for creating questions and answers to help others understand software.
+            </h2>
             <a class="button is-medium is-rounded bg-so" asp-controller="Home" asp-action="Index">Explore</a>
         </div>
 
