--- a/WebApplication5/wwwroot/css/site.css
+++ b/WebApplication5/wwwroot/css/site.css
@@ -116,3 +116,14 @@ body {
 #tags-input {
     width: 10rem;
 }
+
+#login-container {
+    width: 50%;
+}
+
+@media screen and (max-width: 500px) {
+    #login-container {
+        width: 100%;
+    }
+}
+
