--- a/WebApplication5/Views/Shared/_Layout.cshtml
+++ b/WebApplication5/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <a class="navbar-item" asp-controller="Home" asp-action="Index" style="background-color: #272727;">
+                <a class="navbar-item" asp-controller="Home" asp-action="LandingPage" style="background-color: #272727;">
                     <img src="~/logo.png">
                 </a>
 
